--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		<apache-commons-csv-version>1.3</apache-commons-csv-version>
 		<dflib-version>0.10</dflib-version>
 		<junit5.version>5.6.2</junit5.version>
+		<bootique.version>2.0.M1</bootique.version>
 	</properties>
 
 	<scm>
@@ -109,6 +110,13 @@
 				<version>${dflib-version}</version>
 			</dependency>
 			<dependency>
+				<groupId>io.bootique.bom</groupId>
+				<artifactId>bootique-bom</artifactId>
+				<type>pom</type>
+				<scope>import</scope>
+				<version>${bootique.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.cayenne</groupId>
 				<artifactId>cayenne-server</artifactId>
 				<version>${cayenne-version}</version>
@@ -143,11 +151,6 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>1.3.2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.derby</groupId>
-				<artifactId>derby</artifactId>
-				<version>10.14.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
