--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>bootique-jdbc-junit5-derby</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.bootique.cayenne</groupId>
+            <artifactId>bootique-cayenne-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
