--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
         <jackson-version>2.10.0.pr1</jackson-version>
         <apache-commons-csv-version>1.3</apache-commons-csv-version>
         <dflib-version>0.10</dflib-version>
-        <junit5.version>5.6.2</junit5.version>
-        <bootique.version>2.0.M1</bootique.version>
+        <junit5.version>5.7.2</junit5.version>
+        <bootique.version>2.0.B1</bootique.version>
     </properties>
 
     <scm>
