--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <!-- Custom properties (mostly framework versions) -->
         <slf4j-version>1.7.25</slf4j-version>
         <cayenne-version>4.0.2</cayenne-version>
-        <jackson-version>2.10.0.pr1</jackson-version>
+        <jackson-version>2.12.3</jackson-version>
         <apache-commons-csv-version>1.3</apache-commons-csv-version>
         <dflib-version>0.10</dflib-version>
         <junit5.version>5.7.2</junit5.version>
