--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nhl.link.move</groupId>
     <artifactId>link-move-parent</artifactId>
-    <version>2.15-SNAPSHOT</version>
+    <version>2.15</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -61,7 +60,7 @@
         <connection>scm:git:https://github.com/nhl/link-move</connection>
         <developerConnection>scm:git:ssh://git@github.com/nhl/link-move</developerConnection>
         <url>https://github.com/nhl/link-move</url>
-        <tag>HEAD</tag>
+        <tag>link-move-parent-2.15</tag>
     </scm>
 
     <distributionManagement>
