--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.nhl.link.move</groupId>
     <artifactId>link-move-parent</artifactId>
-    <version>2.18</version>
+    <version>2.19-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -60,7 +60,7 @@
         <connection>scm:git:https://github.com/nhl/link-move</connection>
         <developerConnection>scm:git:ssh://git@github.com/nhl/link-move</developerConnection>
         <url>https://github.com/nhl/link-move</url>
-        <tag>link-move-parent-2.18</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
