--- a/link-move/pom.xml
+++ b/link-move/pom.xml
@@ -26,11 +26,6 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.cayenne</groupId>
-            <artifactId>cayenne-java8</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>compile</scope>
@@ -44,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>io.bootique.cayenne</groupId>
-            <artifactId>bootique-cayenne-junit5</artifactId>
+            <artifactId>bootique-cayenne42-junit5</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
