--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
 
         <!-- Custom properties (mostly framework versions) -->
         <slf4j-version>1.7.25</slf4j-version>
-        <cayenne-version>4.0.2</cayenne-version>
+        <cayenne-version>4.2.RC1</cayenne-version>
         <jackson-version>2.12.3</jackson-version>
         <apache-commons-csv-version>1.3</apache-commons-csv-version>
         <dflib-version>0.12</dflib-version>
         <junit5.version>5.7.2</junit5.version>
-        <bootique.version>2.0.B1</bootique.version>
+        <bootique.version>2.0.1</bootique.version>
     </properties>
 
     <scm>
@@ -94,7 +94,7 @@
             </dependency>
             <dependency>
                 <groupId>io.bootique.cayenne</groupId>
-                <artifactId>bootique-cayenne-junit5</artifactId>
+                <artifactId>bootique-cayenne42-junit5</artifactId>
                 <version>${bootique.version}</version>
             </dependency>
 
@@ -102,22 +102,11 @@
                 <groupId>org.apache.cayenne</groupId>
                 <artifactId>cayenne-server</artifactId>
                 <version>${cayenne-version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>commons-logging</artifactId>
-                        <groupId>commons-logging</groupId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit5.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cayenne</groupId>
-                <artifactId>cayenne-java8</artifactId>
-                <version>${cayenne-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
