--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,14 @@
         <maven.compiler.release>11</maven.compiler.release>
 
         <!-- Custom properties (mostly framework versions) -->
-        <slf4j-version>1.7.25</slf4j-version>
-        <cayenne-version>4.2.RC1</cayenne-version>
-        <jackson-version>2.12.3</jackson-version>
-        <apache-commons-csv-version>1.3</apache-commons-csv-version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <cayenne.version>4.2.RC1</cayenne.version>
+        <jackson.version>2.12.3</jackson.version>
+        <commons.csv.version>1.3</commons.csv.version>
         <dflib-version>0.12</dflib-version>
         <junit5.version>5.7.2</junit5.version>
         <bootique.version>2.0.1</bootique.version>
+        <logback.version>1.2.11</logback.version>
     </properties>
 
     <scm>
@@ -101,7 +102,7 @@
             <dependency>
                 <groupId>org.apache.cayenne</groupId>
                 <artifactId>cayenne-server</artifactId>
-                <version>${cayenne-version}</version>
+                <version>${cayenne.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -116,27 +117,27 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j-version}</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>${jackson-version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
-                <version>${apache-commons-csv-version}</version>
+                <version>${commons.csv.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.2.3</version>
+                <version>${logback.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
