--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <cayenne.version>4.2.RC1</cayenne.version>
         <jackson.version>2.12.3</jackson.version>
         <commons.csv.version>1.3</commons.csv.version>
-        <dflib-version>0.12</dflib-version>
+        <dflib.version>0.12</dflib.version>
         <junit5.version>5.7.2</junit5.version>
         <bootique.version>2.0.1</bootique.version>
         <logback.version>1.2.11</logback.version>
@@ -81,7 +81,7 @@
                 <artifactId>dflib-bom</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
-                <version>${dflib-version}</version>
+                <version>${dflib.version}</version>
             </dependency>
 
             <!--
