--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <cayenne.version>4.2.RC1</cayenne.version>
         <jackson.version>2.13.4</jackson.version>
+        <jackson.databind.version>2.13.4.2</jackson.databind.version>
         <commons.csv.version>1.3</commons.csv.version>
         <dflib.version>0.12</dflib.version>
         <junit5.version>5.7.2</junit5.version>
@@ -127,7 +128,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
