--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,9 @@
         <jackson.databind.version>2.14.2</jackson.databind.version>
         <commons.csv.version>1.3</commons.csv.version>
         <dflib.version>0.17</dflib.version>
-        <junit5.version>5.7.2</junit5.version>
-        <bootique.version>2.0.1</bootique.version>
-        <logback.version>1.2.11</logback.version>
+        <junit5.version>5.9.1</junit5.version>
+        <bootique.version>3.0.M1</bootique.version>
+        <logback.version>1.4.5</logback.version>
     </properties>
 
     <scm>
