--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <!-- Custom properties (mostly framework versions) -->
         <slf4j.version>2.0.7</slf4j.version>
-        <cayenne.version>4.2.RC2</cayenne.version>
+        <cayenne.version>4.2</cayenne.version>
         <jackson.version>2.14.2</jackson.version>
         <jackson.databind.version>2.14.2</jackson.databind.version>
         <commons.csv.version>1.3</commons.csv.version>
