--- a/link-move-csv/pom.xml
+++ b/link-move-csv/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>link-move-parent</artifactId>
         <groupId>com.nhl.link.move</groupId>
-        <version>3.0.M5</version>
+        <version>3.0.M6-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
