--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: JDK ${{ matrix.java }}
+    strategy:
+      matrix:
+        java: [ 11, 17, 21 ]
 
     steps:
       - name: Checkout...
