--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <junit5.version>5.9.1</junit5.version>
         <bootique.version>3.0.M1</bootique.version>
         <logback.version>1.4.5</logback.version>
+        <mockito.version>3.9.0</mockito.version>
     </properties>
 
     <scm>
@@ -117,8 +118,8 @@
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>2.0.2-beta</version>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -157,7 +158,7 @@
     <dependencies>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
